# CG

./: .gitignore  CG.files  CMakeLists.txt  classes.class.violet.html
include/: app.h  camera.h  chessboard.h  drawable.h  filesystem.h  fontface.h  light.h  logging.h  material.h  mesh.h  meshinstance.h  objLoader.h  object.h  ocean.h  onscreentext.h  scene.h  shader.h  shaderprogram.h  skybox.h  testbox.h  texture.h  types.h
models/: chesspiece_bishop.blend  chesspiece_bishop.mtl  chesspiece_king.blend  chesspiece_king.mtl  chesspiece_knight.blend  chesspiece_knight.mtl  chesspiece_pawn.blend  chesspiece_pawn.mtl  chesspiece_queen.blend  chesspiece_queen.mtl  chesspiece_rook.blend  chesspiece_rook.mtl
shader/: ocean.frag  ocean.sp  ocean.vert  onscreentext.fs  onscreentext.sp  onscreentext.vs  skybox.fs  skybox.sp  skybox.vs  testbox.fs  testbox.sp  testbox.vs  wood.fs  wood.sp  wood.vs  wood_chessboard.fs  wood_chessboard.sp  wood_chessboard.vs
src/: app.cpp  camera.cpp  chessboard.cpp  drawable.cpp  filesystem.cpp  fontface.cpp  main.cpp  mesh.cpp  mesh.h  meshinstance.cpp  meshinstance.h  objLoader.cpp  objLoader.h  object.cpp  ocean.cpp  onscreentext.cpp  scene.cpp  shader.cpp  shaderprogram.cpp  skybox.cpp  testbox.cpp  texture.cpp
